# actions-poc

./: .gitignore  CHANGELOG.md  Dockerfile  main.py  pyproject.toml
.github/workflows/: homolog.yml  prod.yml  release.yml  rollback.yml  test.yml
dockerfiles/: Dockerfile_Base  Dockerfile_Prod
